monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/Component.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

component grammar Component {

  external A;

  abstract B;

  interface C;

}
