monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4009/A4009e.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4009;

grammar A4009e extends de.monticore.grammar.cocos.invalid.A4009.A4009 {

  abstract QualifiedName;

}
